--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.15.1",
+    "@nuxt/icon": "2.2.1",
+    "@tailwindcss/vite": "^4.1.18",
     "nuxt": "^4.3.1",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^7.4.3",
+    "@iconify-json/tabler": "^1.2.26",
+    "daisyui": "^5.5.18",
     "eslint": "^10.0.0",
     "eslint-plugin-format": "^1.4.0",
     "eslint-plugin-n": "^17.23.2",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.7"
+    "lint-staged": "^16.2.7",
+    "vite-tsconfig-paths": "^6.1.0"
   },
   "lint-staged": {
     "*": "pnpm lint"
