--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently \"pnpm run dev:db\"  \"nuxt dev\"",
+    "dev:db": "turso dev --db-file local.db",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -13,10 +14,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@libsql/client": "^0.17.0",
     "@nuxt/eslint": "1.15.1",
     "@nuxt/icon": "2.2.1",
     "@nuxtjs/color-mode": "4.0.0",
     "@tailwindcss/vite": "^4.1.18",
+    "concurrently": "^9.2.1",
+    "drizzle-orm": "^0.45.1",
     "nuxt": "^4.3.1",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.28",
@@ -27,6 +31,7 @@
     "@antfu/eslint-config": "^7.4.3",
     "@iconify-json/tabler": "^1.2.26",
     "daisyui": "^5.5.18",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^10.0.0",
     "eslint-plugin-format": "^1.4.0",
     "eslint-plugin-n": "^17.23.2",
